syntax = "proto3";

package blank;

option go_package = "internal/presenters/grpc/pb";

import "api/proto/campaign.proto";
import "api/proto/advertiser.proto";

service PlatformsService {
  rpc CreateCampaign (CampaignRequest) returns (CampaignID) {}
  rpc FindCampaign (CampaignID) returns (CampaignResponse) {}
  rpc CreateAdvertiser (Advertiser) returns (AdvertiserID) {}
}